--- a/Content/Custom/css/custom-bootstrap.css
+++ b/Content/Custom/css/custom-bootstrap.css
@@ -10,7 +10,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #337AB4;
     border-width: 3px;
 }
 
@@ -19,7 +19,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #337AB4;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -27,7 +27,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #2E5386;
 }
 
 h1,
@@ -46,7 +46,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #337AB4;
 }
 
 .bg-dark {
@@ -83,12 +83,12 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #337AB4;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: #2E5386;
 }
 
 .navbar-default .nav > li>a,
@@ -101,12 +101,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #337AB4;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #337AB4!important;
     background-color: transparent;
 }
 
@@ -147,12 +147,12 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #337AB4;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+        color: #2E5386;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -162,7 +162,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #337AB4;
     }
 }
 
@@ -316,7 +316,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #337AB4;
 }
 
 .no-gutter > [class*=col-] {
@@ -378,9 +378,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #337AB4;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #337AB4;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -421,12 +421,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #337AB4;
+    background-color: #337AB4;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #337AB4;
     background-color: #fff;
 }
 
